# platform-game

./: CMakeLists.txt  readme.md
Header Files/: Animation.hpp  Cell.hpp  Game.hpp  Pawn.hpp  PawnState.hpp  Player.hpp  PlayerChoice.hpp  Stats.hpp  stdafx.hpp
Header Files/entities/: Enemy.hpp  EnemyType.hpp  Pawn.hpp  PawnState.hpp  Player.hpp
Header Files/entities/enemies/: Human.hpp  Spider.hpp
Header Files/gameplay/: Animation.hpp  Game.hpp
Header Files/gameplay/map/: Map.hpp  MapManager.hpp
Header Files/gameplay/pawns/: Enemy.hpp  Pawn.hpp  Player.hpp
Header Files/map/: Cell.hpp  CellType.hpp  Map.hpp  MapManager.hpp
Header Files/menu/: MainMenu.hpp
Header Files/pawns/: Enemy.hpp  Entity.hpp  Pawn.hpp  Player.hpp
Header Files/pawns/enemies/: Bat.hpp  EnemyType.hpp  ForestBoss.hpp  Forest_boss.hpp  Hedgehog.hpp  Snake.hpp
Header Files/pawns/enums/: CellType.hpp  EnemyType.hpp  PawnState.hpp
Header Files/views/: App.hpp  Button.hpp  ButtonType.hpp  GameOver.hpp  GameOverView.hpp  Gameplay.hpp  GameplayView.hpp  MainMenu.hpp  MainMenuView.hpp  NextLevel.hpp  NextLevelView.hpp  TextInput.cpp  TextInput.hpp  ViewType.hpp
Header Files/views/menu/: Button.hpp  ButtonType.hpp  Menu.hpp  TextInput.hpp
Headers/: AI_Pawn.hpp  Animation.hpp  Direction.hpp  Entity.hpp  Game.hpp  Pawn.hpp  PawnState.hpp  Pawns.hpp  Player.hpp  stdafx.hpp
Source Files/: AI_Pawn.cpp  Animation.cpp  Cell.cpp  Entity.cpp  Game.cpp  PawnState.cpp  Pawns.cpp  Player.cpp  Stats.cpp  main.cpp  stdafx.cpp
Source Files/entities/: Entity.cpp  PawnState.cpp  Player.cpp
Source Files/entities/enemies/: Bat.cpp  Forest_boss.cpp  Hedgehog.cpp  Human.cpp  Spider.cpp
Source Files/gameplay/: Animation.cpp  Game.cpp
Source Files/gameplay/map/: Cell.cpp  Map.cpp  MapManager.cpp
Source Files/gameplay/pawns/: Entity.cpp  PawnState.cpp  Player.cpp
Source Files/gameplay/pawns/enemies/: Bat.cpp  Forest_boss.cpp  Hedgehog.cpp  Human.cpp  Spider.cpp
Source Files/map/: Cell.cpp  Map.cpp  MapManager.cpp
Source Files/menu/: MainMenu.cpp
Source Files/pawns/: Enemy.cpp  Entity.cpp  PawnState.cpp  Player.cpp
Source Files/pawns/enemies/: Bat.cpp  Enemy.cpp  ForestBoss.cpp  Forest_boss.cpp  Hedgehog.cpp  Human.cpp  Snake.cpp  Spider.cpp
Source Files/views/: App.cpp  Button.cpp  GameOver.cpp  GameOverView.cpp  Gameplay.cpp  GameplayView.cpp  MainMenuView.cpp  NextLevel.cpp  NextLevelView.cpp  TextInput.cpp
Source Files/views/menu/: Button.cpp  Menu.cpp  TextInput.cpp
game_saves/: _save.csv  a_save.csv  aa_save.csv  aaa_save.csv  aaaaaa_save.csv  ala_ma_kota_save.csv  ala_save.csv  roza_save.csv  ss_save.csv  tescik_save.csv
